--- a/index.html
+++ b/index.html
@@ -18,55 +18,66 @@
         <div class="contenedor-monedas">
 
             <div class="contenedor-moneda-inter">
-                <h2>DOLAR</h2>
-                <div class="moneda-inter">
-                    <input onkeyup="cambioDolarPesos()" id="dolar" type="text">
+                <div class="contenedor-dentro-monedas">
+                    <h2>DOLAR</h2>
+                    <div class="moneda-inter">
+                        <input onkeyup="cambioDolarPesos()" id="dolar" type="text">
+                    </div>
                 </div>
 
-                <h2>EURO</h2>
-                <div class="moneda-inter">
-                    <input onkeyup="cambioEuroPesos()" id="euro" type="text">
+                <div class="contenedor-dentro-monedas">
+                    <h2>EURO</h2>
+                    <div class="moneda-inter">
+                        <input onkeyup="cambioEuroPesos()" id="euro" type="text">
 
+                    </div>
                 </div>
 
-                <h2>REAL</h2>
-                <div class="moneda-inter">
-                    <input onkeyup="cambioRealPesos()" id="real" type="text">
+                <div class="contenedor-dentro-monedas">
+                    <h2>REAL</h2>
+                    <div class="moneda-inter">
+                        <input onkeyup="cambioRealPesos()" id="real" type="text">
 
+                    </div>
                 </div>
+
             </div>
             <div class="contenedor-tasa">
-                <div>
+                <div class="contenedor-dentro-tasa">
                     <h3>TASA</h3>
                     <div id="tasa-peso-dolar" class="tasa"></div>
                 </div>
-                <div>
+                <div class="contenedor-dentro-tasa">
                     <h3>TASA</h3>
                     <div id="tasa-peso-euro" class="tasa"></div>
                 </div>
-                <div>
+                <div class="contenedor-dentro-tasa">
                     <h3>TASA</h3>
                     <div id="tasa-peso-real" class="tasa"></div>
                 </div>
-                
-               
+
+
             </div>
             <div class="contenedor-moneda-arg">
-                <h2>PESOS ARG</h2>
-                <div class="moneda-arg">
-                    <input onkeyup="cambioPesosDolar()"id="peso-dolar" type="text">
-
+                <div class="contenedor-dentro-pesos">
+                    <h2>ARG</h2>
+                    <div class="moneda-arg">
+                        <input onkeyup="cambioPesosDolar()" id="peso-dolar" type="text">
+                    </div>
                 </div>
-                <h2>PESOS ARG</h2>
-                <div class="moneda-arg">
-                    <input onkeyup="cambioPesosEuro()" id="peso-euro" type="text">
-
+                <div class="contenedor-dentro-pesos">
+                    <h2>ARG</h2>
+                    <div class="moneda-arg">
+                        <input onkeyup="cambioPesosEuro()" id="peso-euro" type="text">
+                    </div>
                 </div>
-                <h2>PESOS ARG</h2>
-                <div class="moneda-arg">
-                    <input onkeyup="cambioPesosReal()" id="peso-real" type="text">
-
+                <div class="contenedor-dentro-pesos">
+                    <h2>ARG</h2>
+                    <div class="moneda-arg">
+                        <input onkeyup="cambioPesosReal()" id="peso-real" type="text">
+                    </div>
                 </div>
+
             </div>
         </div>
     </div>
